# fileorg

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  USAGE.md  pyproject.toml
src/fileorg/: __init__.py  main.py
src/fileorg/ai/: __init__.py  habit_analyzer.py  llm_client.py  project_organizer.py  prompts.py
src/fileorg/cli/: app.py  clean.py  report.py  scan.py  web.py
src/fileorg/config/: __init__.py  logging_config.py  settings.py
src/fileorg/core/: analyzer.py  executor.py  hasher.py  organizer.py  scanner.py
src/fileorg/definition/: analysis.py  file_info.py  scan_result.py  suggestion.py
src/fileorg/report/: markdown.py
src/fileorg/util/: console.py
src/fileorg/web/: __init__.py  app.py
src/fileorg/web/static/: index.html
