[project]
name = "fileorg"
version = "0.1.0"
description = "AI-powered file organization assistant for P-type personalities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
fo = "fileorg.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fileorg"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
